--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@types/bluebird": "^3.5.29",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/node": "^13.7.4",
     "@types/validator": "^12.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.5",
