--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/multer": "^1.4.2",
     "@types/node": "^13.7.4",
     "@types/validator": "^12.0.1",
+    "@types/yup": "^0.26.32",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.5",
@@ -38,7 +41,8 @@
     "sequelize-typescript": "^1.1.0",
     "ts-node": "^8.6.2",
     "tsc-watch": "^4.1.0",
-    "typescript": "^3.8.2"
+    "typescript": "^3.8.2",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "tslint": "^6.0.0"
