--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/multer": "^1.4.2",
     "@types/node": "^13.7.4",
+    "@types/nodemailer": "^6.4.0",
     "@types/validator": "^12.0.1",
     "@types/yup": "^0.26.32",
     "bcryptjs": "^2.4.3",
@@ -34,6 +35,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.3",
     "pg": "^7.18.2",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.5",
